2015-01-25  Titus Brown  <titus@idyll.org>

   * sandbox/correct-errors.py: fixed sequence output so that quality
   scores length always matches the sequence length; fixed argparse
   setup to make use of default parameter.

2015-01-25  Titus Brown  <titus@idyll.org>

    * sandbox/readstats.py: fixed non-functional string interpolation at end;
    added -o to send output to a file; moved to scripts/.
    * doc/user/scripts.txt: added readstats description.
    * tests/test_scripts.py: added tests for readstats.py

2015-01-23  Jessica Mizzi  <mizzijes@msu.edu>

    * khmer/utils.py: Added single write_record fuction to write FASTA/Q
    * scripts/{abundance-dist,extract-long-sequences,extract-partitions,
    interleave-reads,normalize-by-median,sample-reads-randomly}.py: 
    Replaced FASTA/Q writing method with write_record

2015-01-23  Michael R. Crusoe  <mcrusoe@msu.edu>

    * Makefile: remove the user installs for the `install-dependencies` target

2015-01-23  Michael R. Crusoe  <mcrusoe@msu.edu>

    * README.rst,doc/user/install.txt: clarify that we support Python 2.7.x
    and not Python 3.

2015-01-21  Luiz Irber  <irberlui@msu.edu>

    * lib/hllcounter.{cc,hh}: Implemented a HyperLogLog counter.
    * khmer/{_khmermodule.cc, __init__.py}: added HLLCounter class
    initialization and wrapper.
    * tests/test_hll.py: added test functions for the new
    HyperLogLog counter.
    * sandbox/unique-kmers.py: implemented a CLI script for
    approximate cardinality estimation using a HyperLogLog counter.
    * setup.cfg, Makefile, third-party/smhasher/MurmurHash3.{cc,h},
    lib/kmer_hash.{cc,hh}, setup.py: added MurmurHash3 hash function
    and configuration.
    * setup.py: added a function to check if compiler supports OpenMP.

2015-01-14  Reed Cartwright  <cartwright@asu.edu>

    * doc/dev/getting-started.txt: Added install information for
    Arch Linux

2014-01-14  Michael R. Crusoe  <mcrusoe@msu.edu>
