@@ -1,3 +1,9 @@
+2015-02-01  Titus Brown  <titus@idyll.org>
+
+   * khmer/_khmermodule.cc: added functions hash_find_all_tags_list and
+   hash_get_tags_and_positions to CountingHash objects.
+   * tests/test_counting_hash.py: added tests for new functionality.
+
 2015-01-25  Titus Brown  <titus@idyll.org>
 
    * sandbox/correct-errors.py: fixed sequence output so that quality
